Fixed any remaining spacing issues I could find.

--- a/less/variables.less
+++ b/less/variables.less
@@ -11,4 +11,4 @@
 @mobile-padding: 3rem;
 @mobile-header-padding: 6rem 3rem 0;
 @mobile: ~"(max-width: 500px)";
-@tablet: ~"(max-width: 1000px)";
+@tablet: ~"(max-width: 800px)";
